--- a/index.html
+++ b/index.html
@@ -24,13 +24,17 @@
                 <img>
         </section>
 
-        <div><button class="glow-on-hover" type="button">Talk To Me Goose!</button></div>
+        <div id="button"><button class="hot" type="button">Talk To Me Goose!</button></div>
         <ul></ul>
+        <div id="chart">
+            <canvas id="duckChart"></canvas>
+        </div>
 
     </main>
     <footer>
         <p>&copy; iAmAndrewCarroll</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 
